--- a/gateway/settings.gradle
+++ b/gateway/settings.gradle
@@ -5,7 +5,9 @@
  * https://www.gnu.org/licenses/lgpl-3.0.html
  */
 /* Build Script */
-rootProject.name = "content-discovery-retrieval"
-include "multi-int-store"
-include "ingest"
-include "gateway"
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+    }
+}
+rootProject.name = "gateway"
