--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -29,9 +29,9 @@ dependencies {
             "org.springframework.boot:spring-boot-starter-oauth2-client",
             "org.springframework.cloud:spring-cloud-starter-gateway",
             "org.springframework.cloud:spring-cloud-starter-security",
-            // for sample controller in gateway
-            "org.springframework.boot:spring-boot-starter-thymeleaf",
-            "org.thymeleaf.extras:thymeleaf-extras-springsecurity5"
+            "org.springframework.cloud:spring-cloud-starter-oauth2",
+            "org.springframework.boot:spring-boot-starter-actuator",
+            "javax.servlet:javax.servlet-api"
 }
 
 dependencyCheck {
