--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -26,12 +26,12 @@ dependencyManagement {
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-webflux",
+            "org.springframework.boot:spring-boot-starter-thymeleaf",
+            "org.springframework.boot:spring-boot-starter-security",
             "org.springframework.boot:spring-boot-starter-oauth2-client",
-            "org.springframework.cloud:spring-cloud-starter-gateway",
-            "org.springframework.cloud:spring-cloud-starter-security",
-            "org.springframework.cloud:spring-cloud-starter-oauth2",
             "org.springframework.boot:spring-boot-starter-actuator",
-            "javax.servlet:javax.servlet-api"
+            "org.springframework.cloud:spring-cloud-starter-gateway",
+            "org.thymeleaf.extras:thymeleaf-extras-springsecurity5"
 }
 
 dependencyCheck {
