--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -31,7 +31,9 @@ dependencies {
             "org.springframework.boot:spring-boot-starter-oauth2-client",
             "org.springframework.boot:spring-boot-starter-actuator",
             "org.springframework.cloud:spring-cloud-starter-gateway",
-            "org.thymeleaf.extras:thymeleaf-extras-springsecurity5"
+            "org.thymeleaf.extras:thymeleaf-extras-springsecurity5",
+            "org.springframework.security:spring-security-oauth2-resource-server",
+            "org.springframework.security:spring-security-oauth2-jose"
 }
 
 dependencyCheck {
